# swe-supervisor

./: README.md  STATUS.md  pyproject.toml  tasks.yaml
.claude/: settings.json
.codex/: config.toml.example
.github/workflows/: ai-governor.yml
contracts/: openapi.yaml
design/: rules.yaml
design/adr/: ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md
policies/: default.yaml
scripts/: claude_hook_validate.py
specs/: SPEC-007.md  SPEC-008.md  SPEC-009.md  SPEC-010.md  SPEC-011.md  SPEC-012.md  SPEC-013.md  current.md
supervisor/: __init__.py  cli.py  core.py  dashboard.py  design_rules.py  dossier.py  formal_gate.py  mcp_server.py  models.py  openapi_gate.py  policy.py  progress.py  provenance.py  review.py  sandbox.py
tests/contract/: test_orders_contract.py
tests/unit/: test_design.py  test_dossier.py  test_gate.py  test_mcp.py  test_openapi.py  test_optional.py  test_review_backends.py
