[project]
name = "swe-supervisor"
version = "0.1.0"
description = "Supervisor layer that gates AI coding agents against SWE practices"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]
llm = ["anthropic>=0.40"]

[project.scripts]
supervisor = "supervisor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["supervisor*"]
